[package]
name = "journal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-builder = "0.2.0"
parse_duration = "2.1.1"
chrono = "0.4.19"
csv = "1.1.6"
serde = { version = "1.0.130", features = ["derive"] }